Added v0.1 Search Overlay UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
         </activity>
 
         <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
+
+        <activity android:name=".SearchOverlay"
+            android:theme="@style/AppTheme.SearchOverlay">
+        </activity>
     </application>
 
 </manifest>
